# gc

./: Cargo.toml  LICENSE  README.md  Settings.toml
colorizer/: Cargo.toml
colorizer/src/: lib.rs
formatter/: Cargo.toml
formatter/src/: animal_formatter.rs
src/: main.rs  settings.rs  utils.rs
